--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <style>
 	#coffee-container select[name="coffee[]"] option {
 		color: black;
@@ -15,12 +16,20 @@
 		border-color: #1e7e34;
 	}
 </style>
+
 <html lang="en">
-  	{% extends 'base.html' %}
+	{% extends 'base.html' %}
 	{% block content %}
-	<body>
 
+	{% for message in get_flashed_messages() %}
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  		{{ message }}
+  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+   		 <span aria-hidden="true">&times;</span>
+  		</button>
+	</div>
 
+	{% endfor %}}
 
     <section class="home-slider owl-carousel">
 
@@ -136,8 +145,30 @@
 </div>
 
 <!-- End of Booking Form -->
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <script>
+
+	function submitForm(event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Get the form inputs
+        var first_name = document.getElementById('first_name').value;
+        var last_name = document.getElementById('last_name').value;
+        var quantity = parseInt(document.getElementById('quantity').value);
+
+        // Perform the validation
+        if (quantity < 30) {
+            alert("Failed to book. The quantity should be at least 30.");
+        } else {
+            // If validation passes, submit the form
+            document.getElementById('menu_form').submit();
+            alert("Successfully booked!");
+        }
+    }
+
 	document.addEventListener("DOMContentLoaded", function() {
 		var coffeeContainer = document.getElementById("coffee-container");
 		var addButton = document.querySelector(".add-coffee");
@@ -412,6 +443,5 @@
 		    </div>
     	</div>
     </section>
-  </body>
 </html>
-{% endblock %}
+	{% endblock %}
