--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -4052,9 +4052,9 @@ input[type="button"].btn-block {
     color: #202326; }
 
 .alert-success {
-  color: #155724;
-  background-color: #d4edda;
-  border-color: #c3e6cb; }
+  color: #0b0b0b;
+  background-color: #71dd8a;
+  border-color: #71dd8a; }
   .alert-success hr {
     border-top-color: #b1dfbb; }
   .alert-success .alert-link {
@@ -4328,8 +4328,7 @@ input[type="button"].btn-block {
   font-weight: 700;
   line-height: 1;
   color: #000;
-  text-shadow: 0 1px 0 #fff;
-  opacity: .5; }
+  text-shadow: 0 1px 0 #fff; }
   .close:hover, .close:focus {
     color: #000;
     text-decoration: none;
