--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -21,15 +21,7 @@
 	{% extends 'base.html' %}
 	{% block content %}
 
-	{% for message in get_flashed_messages() %}
-	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  		{{ message }}
-  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-   		 <span aria-hidden="true">&times;</span>
-  		</button>
-	</div>
 
-	{% endfor %}}
 
     <section class="home-slider owl-carousel">
 
@@ -77,6 +69,14 @@
 	    		</div>
 	    		<!-- Booking Form -->
 <div class="book p-4">
+		{% for message in get_flashed_messages() %}
+	<div class="alert alert-success alert-dismissible fade show" role="alert">
+  		{{ message }}
+  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+   		 <span aria-hidden="true">&times;</span>
+  		</button>
+	</div>
+	{% endfor %}
 	<h3 >Book Coffee for your event!</h3>
 	<form action="/menu" method="POST" class="appointment-form">
 		<div class="d-md-flex">
