--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -4079,8 +4079,8 @@ input[type="button"].btn-block {
     color: #533f03; }
 
 .alert-danger {
-  color: #721c24;
-  background-color: #f8d7da;
+  color: #0d0d0d;
+  background-color: #f1b0b7;
   border-color: #f5c6cb; }
   .alert-danger hr {
     border-top-color: #f1b0b7; }
@@ -4328,7 +4328,7 @@ input[type="button"].btn-block {
   font-weight: 700;
   line-height: 1;
   color: #000;
-  text-shadow: 0 1px 0 #fff; }
+  text-shadow: 0 3px 0 #0d0d0d; }
   .close:hover, .close:focus {
     color: #000;
     text-decoration: none;
