--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -69,14 +69,26 @@
 	    		</div>
 	    		<!-- Booking Form -->
 <div class="book p-4">
-		{% for message in get_flashed_messages() %}
-	<div class="alert alert-success alert-dismissible fade show" role="alert">
-  		{{ message }}
-  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-   		 <span aria-hidden="true">&times;</span>
-  		</button>
-	</div>
-	{% endfor %}
+	{% if messages %}
+    	{% for message in messages %}
+        	{% if "success" in message %}
+            	<div class="alert alert-success alert-dismissible fade show" role="alert">
+                	<p>Data added to the database successfully!</p>
+                	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    	<span aria-hidden="true">&times;</span>
+                	</button>
+            	</div>
+        	{% elif "error" in message %}
+            	<div class="alert alert-danger alert-dismissible fade show" role="alert">
+					<p>Failed to book. The quantity should be at least 30. </p>
+                	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    	<span aria-hidden="true">&times;</span>
+                	</button>
+            	</div>
+        	{% endif %}
+    	{% endfor %}
+	{% endif %}
+
 	<h3 >Book Coffee for your event!</h3>
 	<form action="/menu" method="POST" class="appointment-form">
 		<div class="d-md-flex">
