done flash the success and fail message, images of products are replaced

--- a/coffee1-gh-pages/templates/index.html
+++ b/coffee1-gh-pages/templates/index.html
@@ -109,7 +109,7 @@
 					<div class="form-group">
 						<select class="form-control" name="coffee[]">
 							<option value="classic">Classic</option>
-							<option value="cappuccino">Cappuccino</option>
+							<option value="cappuccino">Cappuccino</opt ion>
 							<option value="latte">Latte</option>
 						</select>
 					</div>
@@ -198,7 +198,7 @@
     				<div class="heading-section text-md-right ftco-animate">
 	          	<span class="subheading">Discover</span>
 	            <h2 class="mb-4">Our Menu</h2>
-	            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+	            <p class="mb-4">A trusted and iconic brand that has been fueling mornings and bringing people together for decades. With its wide range of blends, Nescafé offers a delightful array of flavors, from rich and bold to smooth and comforting, ensuring a perfect cup of coffee for every taste preference. Embrace the energizing aroma and savor the moment with Nescafé.</p>
 	            <p><a href="{{ url_for('menu') }}" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
 	          </div>
     			</div>
@@ -206,22 +206,22 @@
     				<div class="row">
     					<div class="col-md-6">
     						<div class="menu-entry">
-		    					<a href="#" class="img" style="background-image: url(../static/images/menu-1.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(../static/images/Screenshotpacket.jpg);"></a>
 		    				</div>
     					</div>
     					<div class="col-md-6">
     						<div class="menu-entry mt-lg-4">
-		    					<a href="#" class="img" style="background-image: url(../static/images/menu-2.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(../static/images/ScreenshotNes2.png);"></a>
 		    				</div>
     					</div>
     					<div class="col-md-6">
     						<div class="menu-entry">
-		    					<a href="#" class="img" style="background-image: url(../static/images/menu-3.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(../static/images/ScreenshotNes3.jpg);"></a>
 		    				</div>
     					</div>
     					<div class="col-md-6">
     						<div class="menu-entry mt-lg-4">
-		    					<a href="#" class="img" style="background-image: url(../static/images/menu-4.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(../static/images/ScreenshotNes4png.jpg);"></a>
 		    				</div>
     					</div>
     				</div>
@@ -249,49 +249,49 @@
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Discover</span>
             <h2 class="mb-4">Best Coffee Sellers</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Nescafé, perfect drink to kickstart a great day, providing a boost of energy and a delightful flavor that helps you seize the morning with enthusiasm and productivity.</p>
           </div>
         </div>
         <div class="row">
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-1.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/original.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Original</a></h3>
+    						<p>A rich and smooth instant coffee blend that delivers a satisfying taste to start your day right.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-2.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/milktea.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Milk Tea</a></h3>
+    						<p>Discover the creamy indulgence of milk tea infused with the delightful aroma.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-3.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/Rich.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Rich</a></h3>
+    						<p>sImmerse yourself in the bold and robust flavor of Nescafé Rich, a coffee that delivers a satisfy.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-4.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/NesCaramel.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
+    						<h3><a href="#">Caramel</a></h3>
+    						<p>Experience the perfect balance of smooth coffee and luscious caramel flavor.</p>
     						<p class="price"><span>$5.90</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
