--- a/coffee1-gh-pages/templates/cart.html
+++ b/coffee1-gh-pages/templates/cart.html
@@ -116,51 +116,51 @@
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Discover</span>
-            <h2 class="mb-4">Related products</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <h2 class="mb-4">Related Product</h2>
+            <p>Nescafé, perfect drink to kickstart a great day, providing a boost of energy and a delightful flavor that helps you seize the morning with enthusiasm and productivity.</p>
           </div>
         </div>
         <div class="row">
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-1.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/original.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Original</a></h3>
+    						<p>A rich and smooth instant coffee blend that delivers a satisfying taste to start your day right.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-2.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/milktea.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Milk Tea</a></h3>
+    						<p>Discover the creamy indulgence of milk tea infused with the delightful aroma.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-3.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/Rich.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Rich</a></h3>
+    						<p>Immerse yourself in the bold and robust flavor of Nescafé Rich, a coffee that delivers a satisfy.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
         	</div>
         	<div class="col-md-3">
         		<div class="menu-entry">
-    					<a href="#" class="img" style="background-image: url(../static/images/menu-4.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(../static/images/NesCaramel.jpg);"></a>
     					<div class="text text-center pt-4">
-    						<h3><a href="#">Coffee Capuccino</a></h3>
-    						<p>A small river named Duden flows by their place and supplies</p>
-    						<p class="price"><span>$5.90</span></p>
+    						<h3><a href="#">Caramel</a></h3>
+    						<p>Experience the perfect balance of smooth coffee and luscious caramel flavor.</p>
+    						<p class="price"><span>RM2.50</span></p>
     						<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
     					</div>
     				</div>
