--- a/coffee1-gh-pages/templates/checkout.html
+++ b/coffee1-gh-pages/templates/checkout.html
@@ -21,139 +21,131 @@
     </section>
 
     <section class="ftco-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-8 ftco-animate">
-						<form action="#" class="billing-form ftco-bg-dark p-3 p-md-5">
-							<h3 class="mb-4 billing-heading">Billing Details</h3>
-	          	<div class="row align-items-end">
-	          		<div class="col-md-12">
-	                <div class="form-group">
-	                	<label for="firstname">First Name</label>
-	                  <input type="text" class="form-control" placeholder="">
-	                </div>
-	              </div>
-	              <div class="col-md-6">
-
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-8 ftco-animate">
+        <form action="{{ url_for('checkout') }}" method="POST" id="checkout-form" class="billing-form ftco-bg-dark p-3 p-md-5">
+          <h3 class="mb-4 billing-heading">Billing Details</h3>
+          <div class="row align-items-end">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="firstname">First Name</label>
+                <input type="text" name="first_name" class="form-control" placeholder="">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <!-- Add any additional form fields here -->
+            </div>
+            <div class="w-100"></div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="country">Location</label>
+                <div class="select-wrap">
+                  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                  <select name="location" id="" class="form-control">
+                    <option value="SME Bank">SME Bank</option>
+                    <option value="Bank Rakyat">Bank Rakyat</option>
+                    <option value="Petronas">Petronas</option>
+                    <option value="YAB">YAB</option>
+                    <option value="BSN">BSN</option>
+                    <option value="Grantt">Grantt</option>
+                  </select>
                 </div>
-                <div class="w-100"></div>
-		            <div class="col-md-12">
-		            	<div class="form-group">
-		            		<label for="country">Location</label>
-		            		<div class="select-wrap">
-		                  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-		                  <select name="" id="" class="form-control">
-		                  	<option value="">SME Bank</option>
-		                    <option value="">Bank Rakyat</option>
-		                    <option value="">Petronas</option>
-		                    <option value="">YAB</option>
-		                    <option value="">BSN</option>
-		                    <option value="">Grantt</option>
-		                  </select>
-		                </div>
-		            	</div>
-		            </div>
-		            <div class="w-100"></div>
-
-		            <div class="w-100"></div>
-		            <div class="col-md-6">
-	                <div class="form-group">
-	                	<label for="phone">Phone</label>
-	                  <input type="text" class="form-control" placeholder="">
-	                </div>
-	              </div>
-	              <div class="col-md-6">
-	                <div class="form-group">
-	                	<label for="emailaddress">Email Address</label>
-	                  <input type="text" class="form-control" placeholder="">
-	                </div>
+              </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="phone">Phone</label>
+                <input type="text" name="phone" class="form-control" placeholder="">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="emailaddress">Email Address</label>
+                <input type="text" name="email_address" class="form-control" placeholder="">
+              </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-md-12">
+              <div class="form-group mt-4">
+                <div class="radio">
+                  <label class="mr-3"><input type="radio" name="pickup_delivery" value="pickup"> Pickup</label>
+                  <label><input type="radio" name="pickup_delivery" value="delivery"> Delivery</label>
                 </div>
-                <div class="w-100"></div>
-                <div class="col-md-12">
-                	<div class="form-group mt-4">
-										<div class="radio">
-										  <label class="mr-3"><input type="radio" name="optradio"> Create an Account? </label>
-										  <label><input type="radio" name="optradio"> Ship to different address</label>
-										</div>
-									</div>
+              </div>
+            </div>
+
+            <!-- Payment Method -->
+            <div class="col-md-12">
+              <div class="cart-detail ftco-bg-dark p-3 p-md-4">
+                <h3 class="billing-heading mb-4">Payment Method</h3>
+                <div class="form-group">
+                  <div class="col-md-12">
+                    <div class="radio">
+                      <label><input type="radio" name="payment_method" value="direct_bank_transfer" class="mr-2"> Direct Bank Transfer</label>
+                    </div>
+                  </div>
                 </div>
-	            </div>
-	          </form><!-- END -->
+                <div class="form-group">
+                  <div class="col-md-12">
+                    <div class="radio">
+                      <label><input type="radio" name="payment_method" value="check_payment" class="mr-2"> Check Payment</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-md-12">
+                    <div class="radio">
+                      <label><input type="radio" name="payment_method" value="paypal" class="mr-2"> Paypal</label>
+                    </div>
+                  </div>
+                </div>
 
+                <!-- Hidden Fields -->
+                <input type="hidden" name="subtotal" value="{{ subtotal }}">
+                <input type="hidden" name="delivery" value="{{ delivery }}">
+                <input type="hidden" name="total" value="17.60">
 
+                <div class="form-group">
+                  <div class="col-md-12">
+                    <div class="checkbox">
+                      <label><input type="checkbox" name="terms_conditions" value="1" class="mr-2"> I have read and accept the terms and conditions</label>
+                    </div>
+                  </div>
+                </div>
+                <p><button type="submit" form="checkout-form" class="btn btn-primary py-3 px-4">Place an order</button></p>
+              </div>
+            </div>
+          </div>
+        </form><!-- END -->
+        <div class="row mt-5 pt-3 d-flex">
+          <div class="col-md-6 d-flex">
+            <div class="cart-detail cart-total ftco-bg-dark p-3 p-md-4">
+              <h3 class="billing-heading mb-4">Cart Total</h3>
+              <p class="d-flex">
+                <span>Subtotal</span>
+                <span id="cart-subtotal">$20.60</span>
+              </p>
+              <p class="d-flex">
+                <span>Delivery</span>
+                <span id="cart-delivery">$0.00</span>
+              </p>
 
-	          <div class="row mt-5 pt-3 d-flex">
-	          	<div class="col-md-6 d-flex">
-	          		<div class="cart-detail cart-total ftco-bg-dark p-3 p-md-4">
-	          			<h3 class="billing-heading mb-4">Cart Total</h3>
-	          			<p class="d-flex">
-		    						<span>Subtotal</span>
-		    						<span>$20.60</span>
-		    					</p>
-		    					<p class="d-flex">
-		    						<span>Delivery</span>
-		    						<span>$0.00</span>
-		    					</p>
-		    					<p class="d-flex">
-		    						<span>Discount</span>
-		    						<span>$3.00</span>
-		    					</p>
-		    					<hr>
-		    					<p class="d-flex total-price">
-		    						<span>Total</span>
-		    						<span>$17.60</span>
-		    					</p>
-								</div>
-	          	</div>
-	          	<div class="col-md-6">
-	          		<div class="cart-detail ftco-bg-dark p-3 p-md-4">
-	          			<h3 class="billing-heading mb-4">Payment Method</h3>
-									<div class="form-group">
-										<div class="col-md-12">
-											<div class="radio">
-											   <label><input type="radio" name="optradio" class="mr-2"> Direct Bank Tranfer</label>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="col-md-12">
-											<div class="radio">
-											   <label><input type="radio" name="optradio" class="mr-2"> Check Payment</label>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="col-md-12">
-											<div class="radio">
-											   <label><input type="radio" name="optradio" class="mr-2"> Paypal</label>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="col-md-12">
-											<div class="checkbox">
-											   <label><input type="checkbox" value="" class="mr-2"> I have read and accept the terms and conditions</label>
-											</div>
-										</div>
-									</div>
-									<p><a href="#"class="btn btn-primary py-3 px-4">Place an order</a></p>
-								</div>
-	          	</div>
-	          </div>
-          </div> <!-- .col-md-8 -->
-
-
-
-
-
-
-
-
-
-
+              <hr>
+              <p class="d-flex total-price">
+                <span>Total</span>
+                <span id="cart-total">$17.60</span>
+              </p>
+              <hr>
+              <h2>Your Orders</h2>
+            </div>
+          </div>
         </div>
-      </div>
-    </section> <!-- .section -->
+      </div> <!-- .col-md-8 -->
+    </div>
+  </div>
+</section>
 
 
   <script>
@@ -161,19 +153,19 @@
 
 		var quantitiy=0;
 		   $('.quantity-right-plus').click(function(e){
-		        
+
 		        // Stop acting like a button
 		        e.preventDefault();
 		        // Get the field name
 		        var quantity = parseInt($('#quantity').val());
-		        
+
 		        // If is not undefined
-		            
+
 		            $('#quantity').val(quantity + 1);
 
-		          
+
 		            // Increment
-		        
+
 		    });
 
 		     $('.quantity-left-minus').click(function(e){
@@ -181,19 +173,81 @@
 		        e.preventDefault();
 		        // Get the field name
 		        var quantity = parseInt($('#quantity').val());
-		        
+
 		        // If is not undefined
-		      
+
 		            // Increment
 		            if(quantity>0){
 		            $('#quantity').val(quantity - 1);
 		            }
 		    });
-		    
+
 		});
 	</script>
 
-    
+
   </body>
+<script>
+  const cartTableBody = document.querySelector('#cart-table tbody');
+  let cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+  let total = 0;
+
+  // Function to remove an item from the cartItems array
+  function removeCartItem(index) {
+    cartItems.splice(index, 1);
+    localStorage.setItem('cartItems', JSON.stringify(cartItems));
+    renderCartItems(); // Re-render the cart items after removing an item
+  }
+
+  function renderCartItems() {
+    let subtotal = 0;
+    let delivery = 0;
+
+    const cartTotalBox = document.querySelector('.cart-total');
+
+    // Remove existing cart item elements
+    const existingCartItems = document.querySelectorAll('.cart-item');
+    existingCartItems.forEach(item => item.remove());
+
+    cartItems.forEach((item, index) => {
+      subtotal += parseFloat(item.price.slice(1)) * item.quantity; // Multiply price by quantity
+
+      // Create and append new element for each cart item
+      const cartItemElement = document.createElement('div');
+      cartItemElement.classList.add('cart-item');
+      cartItemElement.innerHTML = `
+        <h4>${item.name}</h4>
+        <p>Price: ${item.price}</p>
+        <p>Quantity: ${item.quantity}</p>
+      `;
+      cartTotalBox.appendChild(cartItemElement);
+    });
+
+    // Calculate subtotal, delivery, and total
+    subtotal = cartItems.reduce((sum, item) => sum + parseFloat(item.price.slice(1)) * item.quantity, 0);
+    delivery = 0.00; // Set delivery fee here
+    total = subtotal + delivery;
+
+    const cartSubtotalElement = document.querySelector('#cart-subtotal');
+    cartSubtotalElement.textContent = `$${subtotal.toFixed(2)}`;
+
+    const cartTotalElement = document.querySelector('#cart-total');
+    cartTotalElement.textContent = `$${total.toFixed(2)}`;
+
+    // Set the values of the hidden input fields
+    document.querySelector('input[name="subtotal"]').value = subtotal.toFixed(2);
+    document.querySelector('input[name="delivery"]').value = delivery.toFixed(2);
+    document.querySelector('input[name="total"]').value = total.toFixed(2);
+
+    console.log('subtotal: ', subtotal);
+    console.log('delivery: ', delivery);
+    console.log('total: ', total);
+  }
+
+  renderCartItems();
+
+  console.log('cartItems: ', cartItems);
+</script>
+
 </html>
 {% endblock %}
