--- a/coffee1-gh-pages/templates/index.html
+++ b/coffee1-gh-pages/templates/index.html
@@ -138,56 +138,19 @@
     </section>
 
     <section class="ftco-about d-md-flex">
-    	<div class="one-half img" style="background-image: url(../static/images/bg_6.jpg);"></div>
+    	<div class="one-half img" style="background-image: url(../static/images/gallery-3.jpg);"></div>
     	<div class="one-half ftco-animate">
     		<div class="overlap">
 	        <div class="heading-section ftco-animate ">
 	        	<span class="subheading">Discover</span>
-	          <h2 class="mb-4">Our Story</h2>
+	          	<h2 class="mb-4">Our Story</h2>
 	        </div>
-	        <div>
-	  				<p>Our beverage kiosk based at SBM UUM, offers a wide range of selectable and energizing beverages. The kiosk has been operating since 2019 and is located at the ground floor of the SBM building. It serves a variety of hot and cold beverages, such as coffee and smoothies. The kiosk attracts many students and staff who enjoy its affordable prices, friendly service, and cosy atmosphere.</p>
+	        	<div>
+	  				<p>Our beverage kiosk based at SBM UUM, offers a wide range of selectable and energizing beverages.
+						Our kiosk has been operating since 2019 and is located at the ground floor of the SBM building.
+						We serves a variety of hot and cold beverages, such as coffee and smoothies.</p>
 	  			</div>
   			</div>
-    	</div>
-    </section>
-
-    <section class="ftco-section ftco-services">
-    	<div class="container">
-    		<div class="row">
-          <div class="col-md-4 ftco-animate">
-            <div class="media d-block text-center block-6 services">
-              <div class="icon d-flex justify-content-center align-items-center mb-5">
-              	<span class="flaticon-choices"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Easy to Order</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="media d-block text-center block-6 services">
-              <div class="icon d-flex justify-content-center align-items-center mb-5">
-              	<span class="flaticon-delivery-truck"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Fastest Delivery</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="media d-block text-center block-6 services">
-              <div class="icon d-flex justify-content-center align-items-center mb-5">
-              	<span class="flaticon-coffee-bean"></span></div>
-              <div class="media-body">
-                <h3 class="heading">Quality Coffee</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>    
-          </div>
-        </div>
     	</div>
     </section>
 
@@ -196,11 +159,11 @@
     		<div class="row align-items-center">
     			<div class="col-md-6 pr-md-5">
     				<div class="heading-section text-md-right ftco-animate">
-	          	<span class="subheading">Discover</span>
-	            <h2 class="mb-4">Our Menu</h2>
-	            <p class="mb-4">A trusted and iconic brand that has been fueling mornings and bringing people together for decades. With its wide range of blends, Nescafé offers a delightful array of flavors, from rich and bold to smooth and comforting, ensuring a perfect cup of coffee for every taste preference. Embrace the energizing aroma and savor the moment with Nescafé.</p>
-	            <p><a href="{{ url_for('menu') }}" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
-	          </div>
+	          			<span class="subheading">Discover</span>
+						<h2 class="mb-4">Our Menu</h2>
+						<p class="mb-4">A trusted and iconic brand that has been fueling mornings and bringing people together for decades. With its wide range of blends, Nescafé offers a delightful array of flavors, from rich and bold to smooth and comforting, ensuring a perfect cup of coffee for every taste preference. Embrace the energizing aroma and savor the moment with Nescafé.</p>
+						<p><a href="{{ url_for('menu') }}" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
+					</div>
     			</div>
     			<div class="col-md-6">
     				<div class="row">
@@ -211,7 +174,7 @@
     					</div>
     					<div class="col-md-6">
     						<div class="menu-entry mt-lg-4">
-		    					<a href="#" class="img" style="background-image: url(../static/images/ScreenshotNes2.png);"></a>
+		    					<a href="#" class="img" style="background-image: url(../static/images/paketNes.png);"></a>
 		    				</div>
     					</div>
     					<div class="col-md-6">
@@ -230,16 +193,10 @@
     	</div>
     </section>
 
-    <section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(../static/images/bg_2.jpg);" data-stellar-background-ratio="0.5">
+    <section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(../static/images/ScreenshotNes4png.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
       <div class="container">
-        <div class="row justify-content-center">
-        	<div class="col-md-10">
-        		<div class="row">
 
-		        </div>
-		      </div>
-        </div>
       </div>
     </section>
 
@@ -332,11 +289,6 @@
         </div>
     	</div>
     </section>
-
-
-
-
   </body>
 </html>
 {% endblock %}
-```
