AHA MOMENT - Found the culprit! It was the RM that was replaced as the $. The REGEX deemed not working when using RM.

--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -278,7 +278,7 @@
 		              				<div class="text">
 		              					<h3><a>Original</a></h3>
 		              					<p>A rich and smooth instant coffee blend that delivers a satisfying taste to start your day right.</p>
-		              					<p class="price"><span>RM 2.50</span></p>
+		              					<p class="price"><span>$2.50</span></p>
 		              					<p><a class="btn btn-primary btn-outline-primary">Add to cart</a></p>
 		              				</div>
 		              			</div>
@@ -289,7 +289,7 @@
 		              				<div class="text">
 		              					<h3><a >Milk Tea</a></h3>
 		              					<p>Discover the creamy indulgence of milk tea infused with the delightful aroma and smoothness of Nescafé.</p>
-		              					<p class="price"><span>RM 2.50</span></p>
+		              					<p class="price"><span>$2.50</span></p>
 		              					<p><a class="btn btn-primary btn-outline-primary">Add to cart</a></p>
 		              				</div>
 		              			</div>
