cleared session after checking out

--- a/coffee1-gh-pages/templates/checkout.html
+++ b/coffee1-gh-pages/templates/checkout.html
@@ -236,6 +236,10 @@
   renderCartItems();
 
   console.log('cartItems: ', cartItems);
+  document.querySelector('#checkout-form').addEventListener('submit', function(event) {
+    localStorage.removeItem('cartItems');
+});
+
 </script>
 
 </html>
