--- a/coffee1-gh-pages/templates/checkout.html
+++ b/coffee1-gh-pages/templates/checkout.html
@@ -19,7 +19,7 @@
       </div>
     </section>
 
-    <section class="ftco-section">
+  <section class="ftco-section">
   <div class="container">
     <div class="row">
       <div class="col-xl-8 ftco-animate">
@@ -109,8 +109,8 @@
           </div>
         </form><!-- END -->
         <div class="row mt-5 pt-3 d-flex">
-          <div class="col-md-6 d-flex">
-            <div class="cart-detail cart-total ftco-bg-dark p-3 p-md-4">
+  <div class="col-sm-6 d-flex">
+    <div class="cart-detail cart-total ftco-bg-dark p-3 p-md-4">
               <h3 class="billing-heading mb-4">Cart Total</h3>
               <p class="d-flex">
                 <span>Subtotal</span>
