contact removed and changes are made to base and app

--- a/coffee1-gh-pages/templates/services.html
+++ b/coffee1-gh-pages/templates/services.html
@@ -28,7 +28,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Easy to Order</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>Our online platform makes it incredibly easy to place your order for to buy our products, from the comfort of your own home.</p>
               </div>
             </div>
           </div>
@@ -39,7 +39,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Fastest Delivery</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>Experience the fastest delivery service in the industry, ensuring that your package arrives at your doorstep in record time.</p>
               </div>
             </div>
           </div>
@@ -49,7 +49,7 @@
               	<span class="flaticon-coffee-bean"></span></div>
               <div class="media-body">
                 <h3 class="heading">Quality Coffee</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p> Indulge in our exquisite selection of high-quality coffee, carefully sourced and expertly roasted to perfection, delivering a rich and flavorful experience with every sip.</p>
               </div>
             </div>
           </div>
